--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
 }
-p,h3 {
+p,h3,h4 {
     text-align: center;
 }
 div.wrapper {
